--- a/styles/common.css
+++ b/styles/common.css
@@ -12,14 +12,20 @@
 }
 
 .pagewrapper {
+  margin-top: 4rem;
+  overflow-x: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: fit-content;
+  min-height: calc(100vh - 4rem);
   background-color: #eee;
 }
 .navbar {
+  z-index: 71;
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -79,4 +85,20 @@
 .nav-action:hover {
   color: #01283d;
   background-color: whitesmoke;
+}
+.nav-user {
+  font-family: "Inter", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: whitesmoke;
+  text-shadow: 0 0 8px #f5f5f5a1;
+  user-select: none;
+  text-align: center;
+  line-height: 1.2em;
+  max-width: 6rem;
+  padding: 0.25rem 0.5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-right: 0.25rem;
 }
